<resources>
    <string name="app_name">ListViewPersonalizado</string>
    <string name="registroDeCarros">REGISTRO DE CARROS</string>
    <string name="placa">Placa</string>
    <string name="Marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="registrarCarros">Registrar Carros</string>
    <string name="listarCarros">Listar Carros</string>
    <string name="reportes">Reportes</string>
    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="negro">Negro</string>
    <string name="error1">Por favor ingresar datos</string>
    <string name="mensaje">Carro registrado exitosamente</string>
    <string name="cantidadCarros">No de carros registrados</string>
    <string name="carrosPorMarca">No de carros por marca</string>
    <string name="carrosPorColor">No de carros por color</string>
    <string name="mens1">El número de carros marca KIA registrados es: </string>
    <string name="mens2">El número de carros marca CHEVROLET registrados es: </string>
    <string name="mens3">El número de carros marca NISSAN registrados es: </string>
    <string name="mens4">El número de carros total registrados es:  </string>
    <string name="mens5">El número de carros de color rojo registrados es:  </string>
    <string name="mens6">El número de carros de color blanco registrados es:  </string>
    <string name="mens7">El número de carros de color negro registrados es:  </string>
    <string name="mens8">No existen carros marca KIA registrados </string>
    <string name="mens9">No existen carros marca CHEVROLET registrados </string>
    <string name="mens10">No existen carros marca NISSAN registrados </string>
    <string name="mens11">No existen carros de color rojo registrados </string>
    <string name="mens12">No existen carros de color blanco registrados </string>
    <string name="mens13">No existen carros de color negro registrados </string>

    <string name="aceptar">Aceptar</string>
    <string-array name="opcPrincipal">
        <item>@string/registrarCarros</item>
        <item>@string/listarCarros</item>
        <item>@string/reportes</item>
    </string-array>
    <string-array name="opcMarca">
        <item>KIA</item>
        <item>CHEVROLET</item>
        <item>NISSAN</item>
    </string-array>
    <string-array name="opcModelo">
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
    </string-array>
    <string-array name="opcColor">
        <item>@string/rojo</item>
        <item>@string/blanco</item>
        <item>@string/negro</item>
    </string-array>
    <string-array name="opcReportes">
        <item>@string/cantidadCarros</item>
        <item>@string/carrosPorMarca</item>
        <item>@string/carrosPorColor</item>
    </string-array>
</resources>
